[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/message_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/header_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/message_dialog.gd" type="Script" id=3]
[ext_resource path="res://theme/popup_menu.tres" type="Theme" id=4]
[ext_resource path="res://theme/menu_panel_stylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://sound/focus_in.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/press_button.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/close_menu.wav" type="AudioStream" id=8]

[node name="MessageDialog" type="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -81.0
margin_right = 136.0
margin_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 272.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_styles/panel = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 270.0
margin_bottom = 168.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 268.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "press a button"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 268.0
margin_bottom = 58.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 268.0
margin_bottom = 118.0
custom_constants/margin_right = 8
custom_constants/margin_top = 16
custom_constants/margin_left = 8
custom_constants/margin_bottom = 16

[node name="Message" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 16.0
margin_right = 260.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "something something something"
align = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 268.0
margin_bottom = 126.0

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_left = 110.0
margin_top = 130.0
margin_right = 158.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 48, 24 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "ok"

[node name="ButtonMouseEntered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
bus = "UI"

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
bus = "UI"

[node name="MenuClosed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
bus = "UI"

[connection signal="popup_hide" from="." to="." method="_on_MessageDialog_popup_hide"]
[connection signal="mouse_entered" from="VBoxContainer/PanelContainer/VBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
